--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bootstrap": "^4.3.1",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "pubsub": "^3.2.1",
+    "pubsub-js": "^1.7.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
