--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.11.0",
     "pubsub": "^3.2.1",
     "pubsub-js": "^1.7.0",
     "react": "^16.8.4",
