--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.8.4",
     "react-event-observer": "^0.5.11",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
