--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-event-observer": "^0.5.11",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "recharts": "^1.5.0",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
